<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IpDivider</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_local_project">LocalProjectActivity</string>
    <string name="title_activity_project_info">ProjectInfoActivity</string>
    <string name="no_result">找不到结果</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="begin2use">开始使用</string>
    <string name="no_more_guide">不再显示导航</string>
    <string name="please_input_the_subnet">请输入子网数:</string>
    <string name="the_solutions">本地方案</string>
    <string name="subnet_mask">子网掩码：</string>
    <string name="steps">操作步骤：</string>
    <string name="step1">1.请先输入企业拥有的IP地址段</string>
    <string name="step2">2.请输入需要的子网数目</string>
    <string name="step3">3.请按下回车按钮</string>
    <string name="step4">4.分别输入各个子网所需的IP地址数目</string>
    <string name="GuangDongUniversityofTechnology">广东工业大学</string>
    <string name="One_Yuan_Studio">壹圆创想工作室</string>
    <string name="computed_result">计算结果</string>
    <string name="title">标题</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="please_type_the_solution_name">请输入方案名</string>
    <string name="the_network_segment">网段</string>
    <string name="range">范围</string>
    <string name="mask">掩码</string>
    <string name="used">已用</string>
    <string name="unused">未用</string>
    <string name="another_name">别名</string>
    <string name="IP_needed">所需IP数</string>
    <string name="delete">删除</string>
    <string name="warming_deletion">删除后本方案将不能恢复</string>
    <string name="warning">警告</string>
    <string name="Subnet_number_cannot_be_empty">子网数不能为空</string>
    <string name="Please_finish_configuring_before_computing">请完成配置后再进行计算</string>
    <string name="Your_input_does_not_satisfy_the_current_demand_please_check_and_reenter">你的输入不满足当前需求，请检查并重新输入</string>
    <string name="Please_enter_the_subnet_number_and_determine_to_do_this_again">你的输入不满足当前需求，请检查并重新输入</string>
    <string name="error">错误</string>
    <string name="subnet">子网</string>
    <string name="required_IP_number_can_not_be_0">所需IP数不能为0</string>
    <string name="IP_not_enough">IP资源不够子网分配,请增加IP资源或者减少子网所需IP数</string>
    <string name="export_solution_name">导出的方案名称</string>
    <string name="solution_name">方案名称</string>
    <string name="export_success">导出成功</string>
    <string name="export_path">导出路径</string>
    <string name="Name_cannot_be_empty">方案名称不能为空</string>
    <string name="Subnet_number_suggested_not_greater_than_50">子网数建议不大于50</string>
    <string name="Cannot_be_greater_than_255">不能大于255</string>
    <string name="Cannot_be_greater_than_32">不能大于32</string>
    <string name="Please_input_the_IP_address_you_owned">请输入你拥有的ip地址</string>
</resources>
