<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <TextView
        android:id="@id/title"
        style="@style/Title"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:minWidth="250.0dip"
        android:text="@string/title"/>

    <EditText
        android:id="@id/edite_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/text_blue"
        android:hint="@string/please_type_the_solution_name"
        android:minHeight="60.0dip"
        android:paddingBottom="10.0dip"
        android:paddingLeft="5.0dip"
        android:paddingRight="5.0dip"
        android:paddingTop="10.0dip"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/botton_btn_height">

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/bg_blue"/>

        <Button
            android:id="@id/btn_cancle"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/btn_dialog_selector"
            android:text="@string/cancle"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/bg_blue"/>

        <Button
            android:id="@id/btn_save"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/btn_dialog_selector"
            android:text="@string/confirm"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/bg_blue"/>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/bg_blue"/>
</LinearLayout>