<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:configChanges="locale"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_blue"
                android:gravity="center|left"
                android:minHeight="50.0dip"
                android:paddingLeft="2.0dip"
                android:text="@string/Please_input_the_IP_address_you_owned"
                android:textColor="@color/white"
                android:textSize="@dimen/main_text_mid"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/shap_edite_text"
                android:orientation="horizontal"
                android:padding="7.0dip">

                <com.gdut.ipdivider.view.IpEditText
                    android:id="@id/res_ip_1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/shap_ip_edite_text"
                    android:gravity="center"
                    android:minHeight="50.0dip"
                    android:numeric="integer"
                    android:text="192"/>

                <com.gdut.ipdivider.view.IpEditText
                    android:id="@id/res_ip_2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/shap_ip_edite_text"
                    android:gravity="center"
                    android:minHeight="50.0dip"
                    android:numeric="integer"
                    android:text="168"/>

                <com.gdut.ipdivider.view.IpEditText
                    android:id="@id/res_ip_3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/shap_ip_edite_text"
                    android:gravity="center"
                    android:minHeight="50.0dip"
                    android:numeric="integer"
                    android:text="1"/>

                <com.gdut.ipdivider.view.IpEditText
                    android:id="@id/res_ip_4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/shap_ip_edite_text"
                    android:gravity="center"
                    android:minHeight="50.0dip"
                    android:numeric="integer"
                    android:text="1"/>

                <ImageView
                    android:id="@id/ip_separator"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_gravity="center"
                    android:src="@drawable/ip_separator"/>

                <com.gdut.ipdivider.view.IpEditText
                    android:id="@id/res_mask"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@drawable/shap_ip_edite_text"
                    android:gravity="center"
                    android:minHeight="50.0dip"
                    android:numeric="integer"
                    android:text="20"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="7.0dip">

                <TextView
                    android:layout_width="150.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/please_input_the_subnet"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/main_text_mid"/>

                <com.gdut.ipdivider.view.IpEditText
                    android:id="@id/subnet_count"
                    android:layout_width="50.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:background="@drawable/shap_ip_edite_text"
                    android:gravity="center"
                    android:minHeight="40.0dip"
                    android:numeric="integer"/>

                <ImageButton
                    android:id="@id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10.0dip"
                    android:layout_weight="1.0"
                    android:background="@color/white_transparent"
                    android:src="@drawable/btn_confirm_selector"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50.0dip"
                android:layout_gravity="center|left"
                android:layout_marginBottom="10.0dip"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="7.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subnet_mask"
                    android:textColor="@color/text_grey"
                    android:textSize="@dimen/main_text_samll"/>

                <TextView
                    android:id="@id/subnet_mask_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:text="255.255.255.224"
                    android:textColor="@color/text_grey"
                    android:textSize="@dimen/main_text_mid"/>
            </LinearLayout>

            <include
                layout="@layout/diver_line_v"
                android:layout_width="40.0dip"
                android:paddingLeft="20.0dip"/>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@id/steps_declare"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right|top"
                    android:layout_marginTop="10.0dip"
                    android:gravity="center|left"
                    android:orientation="vertical"
                    android:padding="7.0dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4.0dip"
                        android:text="@string/steps"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/main_text_mid"/>

                    <TextView
                        style="@style/StepsDeclare"
                        android:text="@string/step1"/>

                    <TextView
                        style="@style/StepsDeclare"
                        android:text="@string/step2"/>

                    <TextView
                        style="@style/StepsDeclare"
                        android:text="@string/step3"/>

                    <TextView
                        style="@style/StepsDeclare"
                        android:text="@string/step4"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dip"
                        android:gravity="center"
                        android:text="@string/GuangDongUniversityofTechnology"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/main_text_big"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dip"
                        android:gravity="center"
                        android:text="@string/One_Yuan_Studio"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/main_text_mid"/>
                </LinearLayout>

                <ListView
                    android:id="@id/subnet_setting_listview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:divider="@color/white_transparent"
                    android:dividerHeight="20.0dip"
                    android:footerDividersEnabled="true"
                    android:headerDividersEnabled="true"
                    android:paddingLeft="3.0dip"
                    android:paddingRight="3.0dip"
                    android:visibility="gone"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/botton_btn_height"
        android:background="@color/white_transparent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@id/btn_add"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/btn_add_selector"
            android:src="@drawable/btn_add"/>

        <ImageButton
            android:id="@id/btn_project"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_local_prohect_selector"
            android:src="@drawable/btn_local_project"/>

        <ImageButton
            android:id="@id/btn_calculate_"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_calculate_selector"
            android:src="@drawable/btn_calculate"/>
    </LinearLayout>
</LinearLayout>